--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.dandy.demo">
+    package="com.dandy.demo">
 
     <!--读写sd卡的权限-->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
@@ -14,103 +14,112 @@
         android:theme="@android:style/Theme.Holo.Light.NoActionBar.Fullscreen">
         <activity android:name=".MainActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".AndroidActivity"/>
-        <activity android:name=".OpenGLActivity"/>
-        <activity android:name=".LargeActivity"/>
-        <activity android:name=".AboutActivity"/>
+        <activity android:name=".AndroidActivity" />
+        <activity android:name=".OpenGLActivity" />
+        <activity android:name=".LargeActivity" />
+        <activity android:name=".AboutActivity" />
         <activity
             android:name=".tab.large.objviewer.ObjViewerActivity"
             android:label="ObjViewer">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="com.dandy.demo.category.LARGE"/>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="com.dandy.demo.category.LARGE" />
             </intent-filter>
         </activity>
         <activity
             android:name=".tab.opengl.BackgroundAty"
             android:label="Simple/Background">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="com.dandy.demo.category.OPENGL"/>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="com.dandy.demo.category.OPENGL" />
             </intent-filter>
         </activity>
         <activity
             android:name=".tab.android.TestAty"
             android:label="Graphics/Test">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="com.dandy.demo.category.ANDROID"/>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="com.dandy.demo.category.ANDROID" />
             </intent-filter>
         </activity>
         <activity
             android:name=".tab.opengl.SupportsAty"
             android:label="Supports">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="com.dandy.demo.category.OPENGL"/>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="com.dandy.demo.category.OPENGL" />
             </intent-filter>
         </activity>
         <activity
             android:name=".tab.opengl.Obj3DLoadAiderAty"
             android:label="Obj3DLoadAider">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="com.dandy.demo.category.OPENGL"/>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="com.dandy.demo.category.OPENGL" />
             </intent-filter>
         </activity>
         <activity
             android:name=".tab.opengl.SimpleImageAty"
             android:label="SimpleImage">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="com.dandy.demo.category.OPENGL"/>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="com.dandy.demo.category.OPENGL" />
             </intent-filter>
         </activity>
         <activity
             android:name=".tab.opengl.MS3DLoadAiderAty"
             android:label="MS3DLoadAider">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="com.dandy.demo.category.OPENGL"/>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="com.dandy.demo.category.OPENGL" />
             </intent-filter>
         </activity>
         <activity
             android:name=".tab.opengl.MS3DBinaryLoadAiderAty"
             android:label="MS3DBinaryLoadAider">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="com.dandy.demo.category.OPENGL"/>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="com.dandy.demo.category.OPENGL" />
             </intent-filter>
         </activity>
         <activity
             android:name=".tab.opengl.SimpleEngineImageAty"
             android:label="SimpleEngineImage">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="com.dandy.demo.category.OPENGL"/>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="com.dandy.demo.category.OPENGL" />
             </intent-filter>
         </activity>
         <activity
             android:name=".tab.opengl.FaceObjMixAnimAty"
             android:label="FaceObjMixAnim">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="com.dandy.demo.category.OPENGL"/>
+                <category android:name="com.dandy.demo.category.OPENGL" />
             </intent-filter>
         </activity>
         <activity
             android:name=".tab.android.VideoSurfaceViewMediaPlayAty"
             android:label="Video/SurfaceView+MediaPlay">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="com.dandy.demo.category.ANDROID"/>
+                <category android:name="com.dandy.demo.category.ANDROID" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".tab.opengl.ElementTextureAty"
+            android:label="ElementTexture">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="com.dandy.demo.category.OPENGL" />
             </intent-filter>
         </activity>
     </application>
