--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -130,7 +130,7 @@
                 <category android:name="com.dandy.demo.category.OPENGL" />
             </intent-filter>
         </activity>
-        <activity android:name=".tab.large.objviewer.CameraActivity"
+        <activity android:name=".tab.large.camera.CameraActivity"
             android:label="Camera">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
